platter-compiler-sveltejs/static/python/tests/syntax_programs/invalid_tests/test_script_133.platter
table of Vector3= [
     piece of x;
     piece of y;
     piece of z;
];
